// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainPage renders successfully 1`] = `
<div>
  <div>
    Mocked Page Template (
    Main
    ):
    <span>
      Name
       - 
      Page 1
    </span>
    <h1
      class="MuiTypography-root MuiTypography-h5 css-1uxccsd-MuiTypography-root"
    >
      Welcome to Helpers
    </h1>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1xsir0u-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 MuiGrid-grid-xl-3 css-4031bd-MuiGrid-root"
      >
        <a
          href="path1"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ps6pg7-MuiPaper-root"
          >
            <div
              class="MuiBox-root css-hpgf8j"
            >
              <h2
                class="MuiTypography-root MuiTypography-h6 css-1kgxqm0-MuiTypography-root"
              >
                Page 1
              </h2>
            </div>
          </div>
        </a>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 MuiGrid-grid-xl-3 css-4031bd-MuiGrid-root"
      >
        <a
          href="path2"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ps6pg7-MuiPaper-root"
          >
            <div
              class="MuiBox-root css-hpgf8j"
            >
              <h2
                class="MuiTypography-root MuiTypography-h6 css-1kgxqm0-MuiTypography-root"
              >
                Page 2
              </h2>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`MainPage when got no pages renders successfully 1`] = `
<div>
  <div>
    Mocked Page Template (
    Main
    ):
    <span>
      Name
       - 
    </span>
    <h1
      class="MuiTypography-root MuiTypography-h5 css-1uxccsd-MuiTypography-root"
    >
      Welcome to Helpers
    </h1>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1xsir0u-MuiGrid-root"
    />
  </div>
</div>
`;
